@@ -357,8 +357,13 @@ you use anything other than @code{dvips}.
 
 @unnumberedsubsec Windows users
 Windows users can start the terminal by clicking on the LilyPond or
-Cygwin icons.  You can use any text editor (such as Notepad) to edit
-the LilyPond file.  Viewing the PS file can be done with:
+Cygwin icon.  You can use any text editor (such as NotePad, Emacs or
+Vim) to edit the LilyPond file.  If you install the Cygwin's XFree86
+X11 window system, tetex-x11 and ghostscript-x11 packages too, you can
+view the @code{dvi} output doing @code{xdvi test.dvi} as described
+above.  If you have installed a PostScript/PDF viewer, such as
+@code{GSView} from @uref{http://www.cs.wisc.edu/~ghost}, viewing the
+PS file can be done with:
 @quotation
 @example
 @code{gsview32 test.ps}
